# homework1-template

./: .gitignore  Pipfile  README.md  app.py  dockerfile  main.py  optimization.py  pyproject.toml  requirements.txt  tree.txt
input/modified/: Eco1C1G1T1.input.json
source/: .gitignore  README.md  app.py  main.py  optimization.py  requirements.txt
source/input/modified/: Eco1C1G1T1.input.json
source/templates/: about.html  base.html  index.html  score.html
templates/: base.html  score.html
